--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,28 +35,37 @@
           @{
             if(ViewBag.UserName != null)
             {
-              <ul class="navbar-nav flex-grow-1"></ul>;
+              <ul class="navbar-nav flex-grow-1">
+                @if(ViewBag.isAdmin == 1)
+                {
+                  <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Admin">Admin</a>
+                }
+              </ul>;
             }
           }
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" 
                  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                 @ViewBag.UserName
+                 Account
               </a>
               <div class="dropdown-menu shadow" aria-labelledby="navbarDropdownMenuLink">
+                <div class="form-row mx-2">
+                  <img src="~/images/@ViewBag.Avatar" class="rounded-circle d-block" style="height: 64px;">
+                  <small class="ml-2">Hi @ViewBag.Username !</small>
+                </div>
                 
-                <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Account">Account Settings</a>
                 <div class="dropdown-divider"></div>
+                <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Account">Account Settings</a>
                 <a class="dropdown-item text-danger" asp-area="" asp-controller="User" asp-action="LogOut">Sign Out</a>
               </div>
             </li>
             
             <li class="nav-item">
-              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="far fa-comments mr-1"></i><span class="badge badge-warning badge-pill">14</span></a>
+              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="far fa-comments mr-1"></i><span class="badge badge-warning badge-pill">0</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="fas fa-shopping-cart mr-1"></i><span class="badge badge-success badge-pill">3</span></a>
+              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="fas fa-shopping-cart mr-1"></i><span class="badge badge-success badge-pill">0</span></a>
             </li>
           </ul>  
         </div>
