--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,20 +13,7 @@ textarea {
 </style>
 
 
-<div class="bg-primary py-4">
-  <form class="col-11 col-md-6 mx-auto shadow-lg px-0 rounded">
-    <div class="input-group">
-      <select class="input-group-append border" asp-items="@(new SelectList(ViewBag.AllCategories,"Id","Name"))">
-        <option value="0">All</option>
-      </select>
-      <textarea class="form-control form-control-lg" id="validationDefaultUsername" rows="1" placeholder="Search"></textarea>
-      <div class="input-group-append">
-        <button class="btn btn-warning" type="button"><i class="fas fa-search"></i></button>
-      </div>
-      
-    </div>
-  </form>
-</div>
+<partial name="_Search"></partial>
 
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
