--- a/Views/User/NewUser.cshtml
+++ b/Views/User/NewUser.cshtml
@@ -2,230 +2,80 @@
   ViewData["Title"] = "New User";
 }
 
-<style>
-html, body {
-  background-color: #343a40;
-}
+<link rel="stylesheet" href="~/css/newUser.css" />
 
-textarea {
-  resize: none;
-}
-
-.login-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  margin-top: 50px;
-  height: auto;
-  padding: 5px;
-  box-sizing: border-box;
-}
-
-.login-container img {
-  width: 200px;
-  margin: 0 0 20px 0;
-}
-
-.login-container p {
-  align-self: flex-start;
-  font-family: 'Roboto', sans-serif;
-  font-size: 0.8rem;
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.login-container p a {
-  color: rgba(0, 0, 0, 0.4);
-}
-
-.login {
-  position: relative;
-  width: 100%;
-  padding: 10px;
-  margin: 0 0 10px 0;
-  box-sizing: border-box;
-  border-radius: 3px;
-  background: #FAFAFA;
-  overflow: hidden;
-  animation: input_opacity 0.2s cubic-bezier(.55, 0, .1, 1);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-              0 1px 5px 0 rgba(0, 0, 0, 0.12),
-              0 3px 1px -2px rgba(0, 0, 0, 0.2);
-}
-
-.login > header {
-  padding: 10px;
-  margin: -10px -10px 25px -10px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  background: #007bff;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.3rem;
-  color: #FAFAFA;
-  animation: scale_header 0.6s cubic-bezier(.55, 0, .1, 1), text_opacity 1s cubic-bezier(.55, 0, .1, 1);
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
-              0px 1px 5px 0px rgba(0, 0, 0, 0.12),
-              0px 3px 1px -2px rgba(0, 0, 0, 0.2);
-}
-
-.login > header:before {
-  content: '';
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  width: 100%;
-  height: 5px;
-  padding: 10px;
-  margin: -10px 0 0 -10px;
-  box-sizing: border-box;
-  background: rgba(0, 0, 0, 0.156);
-  font-family: 'Roboto', sans-serif;
-  font-size: 0.9rem;
-  color: transparent;
-  z-index: 5;
-}
-
-
-.login > header h2 {
-  margin: 50px 0 10px 0;
-}
-
-.login > header h4 {
-  font-size: 0.7em;
-  animation: text_opacity 1.5s cubic-bezier(.55, 0, .1, 1);
-  color: rgba(255, 255, 255, 0.4);
-}
-
-/* Form */
-.login-form {
-  padding: 15px;
-  box-sizing: border-box;
-}
-
-
-/* Inputs */
-.login-input {
-  position: relative;
-  width: 100%;
-  padding: 10px 5px;
-  border: none;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
-  box-sizing: border-box;
-  background: transparent;
-  font-size: 1rem;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  opacity: 1;
-  animation: input_opacity 0.8s cubic-bezier(.55, 0, .1, 1);
-  transition: border-bottom 0.2s cubic-bezier(.55, 0, .1, 1);
-}
-
-.login-input:focus {
-  outline: none;
-  border-bottom: 2px solid #343a40;
-}
-
-/* Submit Button */
-.submit-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  position: relative;
-  padding: 10px;
-  margin: 35px -25px -25px -25px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.login-button {
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-  background: transparent;
-  font-family: 'Roboto', sans-serif;
-  font-size: 0.9rem;
-  font-weight: 500;
-  color: #343a40;
-  cursor: pointer;
-  opacity: 1;
-  animation: input_opacity 0.8s cubic-bezier(.55, 0, .1, 1);
-  transition: background 0.2s ease-in-out;
-}
-
-.signup-button {
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-  background: transparent;
-  font-family: 'Roboto', sans-serif;
-  font-size: 0.9rem;
-  font-weight: 500;
-  color: #343a40;
-}
-
-.login-button.raised {
-  padding: 5px 10px;
-  color: #FAFAFA;
-  background: #E37F00;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.137255),
-              0px 1px 5px 0px rgba(0, 0, 0, 0.117647),
-              0px 3px 1px -2px rgba(0, 0, 0, 0.2);
-}
-
-.login-button:hover {
-  background: rgba(0, 0, 0, 0.05);
-}
-
-.login-button.raised:hover {
-  background: #FDAB43;
-}
-
-</style>
-
-<div class="login-container mx-auto col-sm-11 col-md-7 col-lg-8 col-xl-5">
+<div class="login-container mx-auto col-sm-11 col-md-11 col-lg-10 col-xl-8">
 <section class="login" id="login">
     <header>
       <h2>eStore</h2>
       <h4>Register below</h4>
     </header>
-  @model User
-  <form class="login-form" asp-controller="User" asp-action="CreateUser" method="POST">
+  @model RegisterViewModel
+  <form enctype="multipart/form-data" class="login-form" asp-controller="User" asp-action="CreateUser" method="POST">
+
+  <div class="form-row">
+    <div class="col-sm-6">
+      
+      <div class="col-md-8 mx-auto">
+        <div class="input-group mb-3">
+          <div class="custom-file">
+            <input type="file" class="custom-file-input" id="inputGroupFile" asp-for="Image">
+            <label class="custom-file-label text-truncate" for="inputGroupFile" aria-describedby="inputGroupFileAddon">Upload image</label>
+            <span class="invalid-feedback d-block" asp-validation-for="Image"></span>
+          </div>
+        </div>
+        <div class="border text-center p-3">
+          <img src="//placehold.it/140?text=IMAGE" class="img-fluid" id="preview"/>
+        </div>
+      </div>
+    
+    </div>
+    <div class="col-sm-6">
     <div class="form-row">
       <div class="form-group col-6">
-        <label asp-for="FirstName"></label>
-        <textarea class="login-input" rows="1" asp-for="FirstName" autofocus/></textarea>
-        <span class="invalid-feedback d-block" asp-validation-for="FirstName"></span>
+        <label asp-for="User.FirstName"></label>
+        <textarea class="login-input" rows="1" asp-for="User.FirstName" autofocus/></textarea>
+        <span class="invalid-feedback d-block" asp-validation-for="User.FirstName"></span>
       </div>
 
       <div class="form-group col-6">
-        <label asp-for="LastName"></label>
-        <textarea class="login-input" rows="1" asp-for="LastName"/></textarea>
-        <span class="invalid-feedback d-block" asp-validation-for="LastName"></span>
+        <label asp-for="User.LastName"></label>
+        <textarea class="login-input" rows="1" asp-for="User.LastName"/></textarea>
+        <span class="invalid-feedback d-block" asp-validation-for="User.LastName"></span>
       </div>
     </div>
 
     <div class="form-group">
-      <label asp-for="Email"></label>
-      <textarea class="login-input" rows="1" asp-for="Email"/></textarea>
-      <span class="invalid-feedback d-block" asp-validation-for="Email"></span>
+      <label asp-for="User.Email"></label>
+      <textarea class="login-input" rows="1" asp-for="User.Email"/></textarea>
+      <span class="invalid-feedback d-block" asp-validation-for="User.Email"></span>
     </div>
 
     <div class="form-row">
       <div class="form-group col-6">
-        <label asp-for="Password"></label>
-        <input class="login-input" type="password" asp-for="Password"/>
-        <span class="invalid-feedback d-block" asp-validation-for="Password"></span>
-        <small class="text-muted d-block" asp-validation-for="Password">Between 6 and 18 characters in length</small>
-        <small class="text-muted d-block" asp-validation-for="Password">Must contain at least one letter and one number</small>
-        <small class="text-muted d-block" asp-validation-for="Password">Must contain one or more special character from your list !, %, & and #</small>
+        <label asp-for="User.Password"></label>
+        <input class="login-input" type="password" asp-for="User.Password"/>
+        <span class="invalid-feedback d-block" asp-validation-for="User.Password"></span>
+        <small class="text-muted d-block">Between 6 and 18 characters in length</small>
+        <small class="text-muted d-block">Must contain at least one letter and one number</small>
+        <small class="text-muted d-block">Must contain one or more special character from your list !, %, & and #</small>
 
       </div>
 
       <div class="form-group col-6">
-        <label asp-for="Confirm"></label>
-        <input class="login-input" type="password" asp-for="Confirm"/>
-        <span class="invalid-feedback d-block" asp-validation-for="Confirm"></span>
+        <label asp-for="User.Confirm"></label>
+        <input class="login-input" type="password" asp-for="User.Confirm"/>
+        <span class="invalid-feedback d-block" asp-validation-for="User.Confirm"></span>
       </div>
     </div>
+    
+    
+    </div>
+    
+    
+
+    
+  </div> 
     <div class="submit-container">
       <small class="signup-button text-muted">Have an account? <a class="text-primary" asp-action="LogIn">Sign In Here</a></small>
       <button class="login-button" type="submit">SUBMIT</button>
@@ -235,5 +85,35 @@ textarea {
 
 </div>
 
+@section Scripts
+{
+  <script>
+    $(document).ready(function(){
+      $('.custom-file-input').on('change', function() { 
+        let fileName = $(this).val().split('\\').pop(); 
+        $(this).next('.custom-file-label').addClass("selected").html(fileName); 
+      });
+      // get file and preview image
+      $("#inputGroupFile").on('change',function(){
+        var input = $(this)[0];
+        if (input.files && input.files[0]) {
+          var reader = new FileReader();
+          reader.onload = function (e) {
+              $('#preview').attr('src', e.target.result).fadeIn('slow');
+          }
+          reader.readAsDataURL(input.files[0]);
+        }
+      });
+    });
 
+    $(function() {
+      $('#AuctionSwitch').on('change', function() {
+        $('#FixedSwitch').prop('checked', !this.checked);
+      });
+      $('#FixedSwitch').on('change', function() {
+        $('#AuctionSwitch').prop('checked', !this.checked);
+      });
+    });
 
+  </script>
+}
