add to cart feature

--- a/Views/Admin/Admin.cshtml
+++ b/Views/Admin/Admin.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
   <h1 class="display-4">Administration</h1>
-  <p>Welcome, @ViewBag.Username <span class="text-danger font-weight-bold">ADMIN</span></p>
+  <p>Welcome, @ViewBag.UserName <span class="text-danger font-weight-bold">ADMIN</span></p>
   <div class="row">
 
     <div class="col-3">
