--- a/Views/Product/Cart.cshtml
+++ b/Views/Product/Cart.cshtml
@@ -19,9 +19,9 @@
               </div>
               <div class="col-10">
                 <div class="card-body">
-                  <h5 class="card-title text-primary">@item.Title</h5>
+                  <h5 class="card-title">@item.Title</h5>
                   <p class="card-text text-danger">$@item.Price</p>
-                  <a asp-action="RemoveFromCart" asp-route-id="@item.Id" class="btn btn-link btn-sm pl-0">Delete</a>
+                  <a asp-action="RemoveFromCart" asp-route-id="@item.Id" class="btn btn-link btn-sm pl-0">Remove</a>
                 </div>
               </div>
             </div>
