--- a/Views/Product/Store.cshtml
+++ b/Views/Product/Store.cshtml
@@ -38,7 +38,7 @@
             else if(Product.isAuction)
             {
               <p class="card-text">$@Product.BidStartPrice</p>
-              <a href="#" class="btn btn-info btn-sm">Bid Now</a>
+              <a asp-action="Bid" asp-route-id="@Product.Id" class="btn btn-info btn-sm">Bid Now</a>
             }
             
             <p class="card-text"><small class="text-muted"></small></p>
