continued bidding feature

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
               <ul class="navbar-nav flex-grow-1">
                 @if(ViewBag.isAdmin == 1)
                 {
-                  <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Admin">Admin</a>
+                  <a class="nav-link btn btn-dark" asp-area="" asp-controller="Admin" asp-action="Admin">Admin</a>
                 }
               </ul>;
             }
@@ -56,6 +56,9 @@
                 </div>
                 
                 <div class="dropdown-divider"></div>
+                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Orders">Orders</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Bids">Bids</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Selling">Selling</a>
                 <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Account">Account Settings</a>
                 <a class="dropdown-item text-danger" asp-area="" asp-controller="User" asp-action="LogOut">Sign Out</a>
               </div>
