--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,25 +3,23 @@
 }
 
 <style>
-html, body {
-  background-color: #f8f9fa;
-}
+  html, body {
+    background-color: #f8f9fa;
+  }
 
-textarea {
-  resize: none;
-}
+  textarea {
+    resize: none;
+  }
 </style>
-
 
 <partial name="_Search"></partial>
 
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="ads" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#ads" data-slide-to="0" class="active"></li>
+    <li data-target="#ads" data-slide-to="1"></li>
+    <li data-target="#ads" data-slide-to="2"></li>
+    <li data-target="#ads" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
 
@@ -52,7 +50,7 @@ textarea {
 <div class="row mx-0 py-2">
 
   <div class="col-sm-3">
-    <a class="btn btn-dark h-100 w-100" href="/Store">
+    <a class="btn btn-dark h-100 w-100" asp-controller="Product" asp-action="Store">
       <div class="card-body">
         <h5 class="card-title text-light">Store</h5>
         <i class="fas fa-store fa-3x text-warning"></i>
@@ -61,7 +59,7 @@ textarea {
   </div>
 
   <div class="col-sm-3">
-    <a class="btn btn-dark h-100 w-100" href="/Orders">
+    <a class="btn btn-dark h-100 w-100" asp-controller="Product" asp-action="Orders">
       <div class="card-body">
         <h5 class="card-title text-light">Orders</h5>
         <i class="fas fa-box-open fa-3x text-warning"></i>
@@ -70,7 +68,7 @@ textarea {
   </div>
 
   <div class="col-sm-3">
-    <a class="btn btn-dark h-100 w-100" href="/Bids">
+    <a class="btn btn-dark h-100 w-100" asp-controller="Product" asp-action="Bids">
       <div class="card-body">
         <h5 class="card-title text-light">Bids</h5>
         <i class="fas fa-gavel fa-3x text-warning"></i>
@@ -79,7 +77,7 @@ textarea {
   </div>
 
   <div class="col-sm-3">
-    <a class="btn btn-dark h-100 w-100" href="/Sell">
+    <a class="btn btn-dark h-100 w-100" asp-controller="Product" asp-action="Sell">
       <div class="card-body">
         <h5 class="card-title text-light">Sell</h5>
         <i class="fas fa-money-bill-wave fa-3x text-warning"></i>
