--- a/Views/Product/Store.cshtml
+++ b/Views/Product/Store.cshtml
@@ -33,12 +33,13 @@
             @if(Product.isSale)
             {
               <p class="card-text">$@Product.Price</p>
-              <a asp-action="AddtoCart" asp-route-id="@Product.Id" class="btn btn-success btn-sm">Add to Cart</a>
+              <a asp-controller="Product" asp-action="Details" asp-route-id="@Product.Id" class="btn btn-secondary btn-sm">View More</a>
+              <a asp-controller="Product" asp-action="AddtoCart" asp-route-id="@Product.Id" class="btn btn-warning btn-sm">Add to Cart</a>
             }
             else if(Product.isAuction)
             {
               <p class="card-text">$@Product.BidStartPrice</p>
-              <a asp-action="Bid" asp-route-id="@Product.Id" class="btn btn-info btn-sm">Bid Now</a>
+              <a asp-controller="Product" asp-action="Details" asp-route-id="@Product.Id" class="btn btn-info btn-sm">Bid Now</a>
             }
             
             <p class="card-text"><small class="text-muted"></small></p>
