--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -15,41 +15,73 @@
   </div>
 
   <div class="col-md-6">
-    <h4>@Item.Title<h4>
+    <h4>@Item.Title</h4>
     <small class="d-block border-bottom mb-3">By @Item.Brand</small>
     
-    <!-- Add Conditional Statment for Standard Pricing -->
-    <small class="text-muted">Price: 
-      <span class="text-warning d-inline">$@Item.Price</span>
-    </small>
+    @if(Item.isSale)
+    {
+      <p class="text-muted">Price: 
+        <span class="text-warning d-inline">$@Item.Price</span>
+      </p>;
+    }
+    else if(Item.isAuction)
+    {
+      <p class="text-muted d-block">Starting Bid: 
+        <span class="text-warning d-inline">$@Item.BidStartPrice</span>
+      </p>
+      
+      <p class="text-muted">Current Bid: 
+        <span class="text-warning d-inline">$@ViewBag.HighestBid</span>
+      </p>;
+    }
     
-
-    <!-- Add Conditional Statment for Bid Pricing -->
-    <small class="text-muted d-block">Starting Bid: 
-      <span class="text-warning d-inline">$@Item.BidStartPrice</span>
-    </small>
-    
-
-    <small class="text-muted">Current Bid: 
-      <span class="text-warning d-inline">$</span>
-    </small>
-    
-
     <small class="text-muted d-block mt-4">@Item.Description</small>
   </div>
 
   <div class="col-md-3 jumbotron">
-    <a class="btn btn-warning btn-block" asp-controller="Product" asp-action="AddtoCart" asp-route-id="@Item.Id">Add to Cart</a>
-    
-    <form>
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <span class="input-group-text">$</span>
-      </div>
-      <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
-    </div>
-    <a class="btn btn-info btn-block" asp-controller="Product" asp-action="Bid" asp-route-id="@Item.Id">Bid</a>
-    </form>
+
+    @{
+      if(Item.isSale)
+      {
+        <p class="text-muted">Price: 
+          <span class="text-warning d-inline">$@Item.Price</span>
+        </p>
+        <a class="btn btn-warning btn-block" asp-controller="Product" asp-action="AddtoCart" asp-route-id="@Item.Id">Add to Cart</a>;
+      }
+      if(Item.isAuction)
+      {
+        @model Bid
+        <form asp-controller="Product" asp-action="Bid" asp-route-id="@Item.Id" method="POST">
+        <input type="hidden" asp-for="UserId" value="@ViewBag.UserId">
+        <input type="hidden" asp-for="ProductId" value="@Item.Id">
+
+        <h4>Auction</h4>
+        <p class="text-muted">Current Bid: 
+          <span class="text-warning d-inline">$@ViewBag.HighestBid</span>
+        </p>
+
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text">$</span>
+          </div>
+          @{
+            var BidSuggestion = ViewBag.HighestBid + 1;
+          }
+          <input type="text" asp-for="BidAmount" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" value="@BidSuggestion">
+          <span class="invalid-feedback d-block" asp-validation-for="BidAmount"></span>
+
+        </div>
+        <button type="submit" class="btn btn-success btn-block">Bid</button>
+        <small class="d-block">Ends in @Item.AuctionDuration Days</small>
+        if(ViewBag.HighestBidder.Bidder != null)
+        {
+          <small class="d-block">Highest Bidder - @ViewBag.HighestBidder.Bidder.FirstName</small>
+
+          <small class="d-block">Last Bid Placed - @ViewBag.HighestBidder.TimeDiffCreate()</small>
+        }
+        </form>;
+      }
+    }
   </div>
 </div>
 </div>
