--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,6 +14,8 @@
 
 <partial name="_Search"></partial>
 
+
+
 <div id="ads" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#ads" data-slide-to="0" class="active"></li>
@@ -24,16 +26,16 @@
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img class="img-fluid" src="//placehold.it/1950X400.png?text=Ad 1 Here" style="height: 400px;" alt="Image result for landscape images">
+      <img class="img-fluid" src="//placehold.it/1950X300.png?text=Ad 1 Here" style="height: 300px;" alt="Image result for landscape images">
     </div>
     <div class="carousel-item">
-      <img class="img-fluid" src="//placehold.it/1950X400.png?text=Ad 2 Here" style="height: 400px;" alt="Image result for landscape images">
+      <img class="img-fluid" src="//placehold.it/1950X300.png?text=Ad 2 Here" style="height: 300px;" alt="Image result for landscape images">
     </div>
     <div class="carousel-item">
-      <img class="img-fluid" src="//placehold.it/1950X400.png?text=Ad 3 Here" style="height: 400px;" alt="Image result for landscape images">
+      <img class="img-fluid" src="//placehold.it/1950X300.png?text=Ad 3 Here" style="height: 300px;" alt="Image result for landscape images">
     </div>
     <div class="carousel-item">
-      <img class="img-fluid" src="//placehold.it/1950X400.png?text=Ad 4 Here" style="height: 400px;" alt="Image result for landscape images">
+      <img class="img-fluid" src="//placehold.it/1950X300.png?text=Ad 4 Here" style="height: 300px;" alt="Image result for landscape images">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -46,48 +48,51 @@
   </a>
 </div>
 
-<div class="container">
+<div class="px-5 bg-dark">
 <div class="row mx-0 py-2">
 
-  <div class="col-sm-3">
-    <a class="btn btn-dark h-100 w-100" asp-controller="Product" asp-action="Store">
+  <div class="col-sm-3 my-2 px-2">
+    <a class="btn btn-primary h-100 w-100 p-0 border-0 shadow" asp-controller="Product" asp-action="Store">
+      <div class="card-header bg-transparent shadow text-left text-monospace text-uppercase font-weight-bold">Store</div>
       <div class="card-body">
-        <h5 class="card-title text-light">Store</h5>
-        <i class="fas fa-store fa-3x text-warning"></i>
+        <p class="card-text text-light text-left text-monospace">Check out what others are selling</p>
+        <i class="fas fa-cash-register fa-3x"></i>
       </div>
     </a>
   </div>
 
-  <div class="col-sm-3">
-    <a class="btn btn-dark h-100 w-100" asp-controller="Product" asp-action="Orders">
+  <div class="col-sm-3 my-2 px-2">
+    <a class="btn btn-warning h-100 w-100 p-0 border-0 shadow" asp-controller="Product" asp-action="Sell">
+      <div class="card-header bg-transparent shadow text-left text-monospace text-uppercase font-weight-bold">Sell</div>
       <div class="card-body">
-        <h5 class="card-title text-light">Orders</h5>
+        <p class="card-text text-dark text-left text-monospace">Sell an item at a fixed price or host an auction</p>
+        <i class="fas fa-dollar-sign fa-3x text-dark"></i>
+      </div>
+    </a>
+  </div>
+
+  <div class="col-sm-3 my-2 px-2">
+    <a class="btn btn-secondary h-100 w-100 p-0 border-0 shadow" asp-controller="Product" asp-action="Orders">
+      <div class="card-header bg-transparent shadow text-left text-monospace text-uppercase font-weight-bold">Orders</div>
+      <div class="card-body">
+        <h2 class="card-title text-light text-monospace font-weight-bold mb-0">2</h2>
         <i class="fas fa-box-open fa-3x text-warning"></i>
       </div>
     </a>
   </div>
 
-  <div class="col-sm-3">
-    <a class="btn btn-dark h-100 w-100" asp-controller="Product" asp-action="Bids">
+  <div class="col-sm-3 my-2 px-2">
+    <a class="btn btn-light h-100 w-100 p-0 border-0 shadow" asp-controller="Product" asp-action="Bids">
+      <div class="card-header bg-transparent shadow text-left text-monospace text-uppercase font-weight-bold">Bids</div>
       <div class="card-body">
-        <h5 class="card-title text-light">Bids</h5>
+        <h2 class="card-title text-dark text-monospace font-weight-bold mb-0">4</h2>
         <i class="fas fa-gavel fa-3x text-warning"></i>
       </div>
     </a>
   </div>
 
-  <div class="col-sm-3">
-    <a class="btn btn-dark h-100 w-100" asp-controller="Product" asp-action="Sell">
-      <div class="card-body">
-        <h5 class="card-title text-light">Sell</h5>
-        <i class="fas fa-money-bill-wave fa-3x text-warning"></i>
-      </div>
-    </a>
-  </div>
-
 </div>
 </div>
-
 
 
 
