--- a/Views/Product/Store.cshtml
+++ b/Views/Product/Store.cshtml
@@ -8,7 +8,7 @@
 
 <div class="">
   <div class="row mx-0 mt-3">
-    <div class="col-md-2">
+    <div class="col-sm-4 col-md-3 col-lg-2">
       <div class="list-group">
         <a href="#" class="list-group-item list-group-item-action active">
           Cras justo odio
@@ -20,7 +20,7 @@
       </div>
       
     </div>
-    <div class="col-md-10 card-columns">
+    <div class="col-sm-8 col-md-9 col-lg-10 card-columns">
     @{
       foreach(Product Product in ViewBag.AllProducts)
       {
