--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 @{
   if(ViewBag.UserName != null)
   {
-  <header>
+  <header class="sticky-top">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark box-shadow mb-0">
       <div class="container">
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">eStore</a>
@@ -38,7 +38,9 @@
               <ul class="navbar-nav flex-grow-1">
                 @if(ViewBag.isAdmin == 1)
                 {
-                  <a class="nav-link btn btn-dark" asp-area="" asp-controller="Admin" asp-action="Admin">Admin</a>
+                  <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Admin">Admin</a>
+                  </li>;
                 }
               </ul>;
             }
@@ -65,10 +67,10 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="far fa-comments mr-1"></i><span class="badge badge-warning badge-pill">0</span></a>
+              <a class="nav-link text-light" asp-area="" asp-controller="" asp-action=""><i class="far fa-comments mr-1"></i><span class="badge badge-warning badge-pill">10</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" asp-area="" asp-controller="Product" asp-action="Cart"><i class="fas fa-shopping-cart mr-1"></i><span class="badge badge-success badge-pill">@ViewBag.Cart</span></a>
+              <a class="nav-link text-light" asp-area="" asp-controller="Product" asp-action="Cart"><i class="fas fa-shopping-cart mr-1"></i><span class="badge badge-primary badge-pill">@ViewBag.Cart</span></a>
             </li>
           </ul>  
         </div>
