--- a/Views/Shared/_Search.cshtml
+++ b/Views/Shared/_Search.cshtml
@@ -1,18 +1,12 @@
-<style>
-  #search-dropdown {
-    border-radius: .25rem 0 0 .25rem;
-  }
-</style>
-
 <div class="bg-primary py-4">
   <form class="col-11 col-md-6 mx-auto shadow-lg px-0 rounded">
     <div class="input-group">
-      <select id="search-dropdown" class="input-group-append border" asp-items="@(new SelectList(ViewBag.AllCategories,"Id","Name"))">
+      <textarea class="form-control form-control-lg border-right border-top-0 border-bottom-0 border-left-0" id="validationDefaultUsername" rows="1" placeholder="Search"></textarea>
+      <select class="input-group-append px-2 border-0" asp-items="@(new SelectList(ViewBag.AllCategories,"Id","Name"))">
         <option value="0">All</option>
       </select>
-      <textarea class="form-control form-control-lg" id="validationDefaultUsername" rows="1" placeholder="Search"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-warning" type="button"><i class="fas fa-search"></i></button>
+        <button class="btn btn-warning border-0" type="button"><i class="fas fa-search"></i></button>
       </div>
       
     </div>
