added searchbar feature

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -83,9 +83,9 @@
 
   <div class="col-sm-3 my-2 px-2">
     <a class="btn btn-light h-100 w-100 p-0 border-0 shadow" asp-controller="Product" asp-action="Bids">
-      <div class="card-header bg-transparent shadow text-left text-monospace text-uppercase font-weight-bold">Bids</div>
+      <div class="card-header bg-transparent shadow text-left text-monospace text-uppercase font-weight-bold text-muted">Bids</div>
       <div class="card-body">
-        <h2 class="card-title text-dark text-monospace font-weight-bold mb-0">4</h2>
+        <h2 class="card-title text-muted text-monospace font-weight-bold mb-0">4</h2>
         <i class="fas fa-gavel fa-3x text-warning"></i>
       </div>
     </a>
