--- a/Views/Auth/_ChangePassword.cshtml
+++ b/Views/Auth/_ChangePassword.cshtml
@@ -2,7 +2,7 @@
   <h5 class="border-bottom">PASSWORD</h5>
 
   @model PasswordChange
-  <form asp-controller="User" asp-action="ChangePassword" method="POST">
+  <form asp-controller="Auth" asp-action="ChangePassword" method="POST">
     <div class="form-group">
       <label asp-for="CurrentPassword"></label>
       <input asp-for="CurrentPassword" type="password" class="form-control">
