--- a/Views/Product/Store.cshtml
+++ b/Views/Product/Store.cshtml
@@ -6,26 +6,12 @@
 
 <partial name="_Search"></partial>
 
-<div class="">
-  <div class="row mx-0 mt-3">
-    <div class="col-sm-4 col-md-3 col-lg-2">
-      <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action active">
-          Cras justo odio
-        </a>
-        <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-        <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-        <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-        <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
-      </div>
-      
-    </div>
-
-    @foreach(Product Product in ViewBag.AllProducts)
+<div class="mx-3 mt-3">
+  @foreach(Product Product in ViewBag.AllProducts)
+    {
+      if(Product == null || (Product != null && Product.Id == 0))
       {
-        if(Product == null || (Product != null && Product.Id == 0))
-        {
-          <div class="col-sm-8 col-md-9 col-lg-10">
+        <div class="col-sm-8 col-md-9 col-lg-10">
           <div class="card text-center">
             <div class="card-header">No Results Found</div>
             <div class="card-body">
@@ -33,40 +19,38 @@
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
-          </div>;
-        }
-      }
-    <div class="col-sm-8 col-md-9 col-lg-10 card-columns">
-    
-      @foreach(Product Product in ViewBag.AllProducts)
-      {
-        if(Product == null || (Product != null && Product.Id == 0))
-        {
-          break;
-        }
-        var photoPath = "~/images/" + (Product.ImagePath ?? "noimage.png");
-        <div class="card">
-          <img src="@photoPath" asp-append-version="true" class="card-img-top" alt="@photoPath">
-          <div class="card-body">
-            <h5 class="card-title">@Product.Title</h5>
-            @if(Product.isSale)
-            {
-              <small>Buy Now for: </small>
-              <p class="card-text">$@Product.Price</p>
-              <a asp-controller="Product" asp-action="Details" asp-route-id="@Product.Id" class="btn btn-secondary btn-sm">View More</a>
-              <a asp-controller="Product" asp-action="AddtoCart" asp-route-id="@Product.Id" class="btn btn-warning btn-sm">Add to Cart</a>
-            }
-            else if(Product.isAuction)
-            {
-              <small>Bid Starts at: </small>
-              <p class="card-text">$@Product.BidStartPrice</p>
-              <a asp-controller="Product" asp-action="Details" asp-route-id="@Product.Id" class="btn btn-info btn-sm">Bid Now</a>
-            }
-            <p class="card-text"><small class="text-muted"></small></p>
-          </div>
         </div>;
-      } 
-    
-    </div>
+      }
+    }
+  <div class="card-columns">
+  
+    @foreach(Product Product in ViewBag.AllProducts)
+    {
+      if(Product == null || (Product != null && Product.Id == 0))
+      {
+        break;
+      }
+      var photoPath = "~/images/" + (Product.ImagePath ?? "noimage.png");
+      <div class="card">
+        <img src="@photoPath" asp-append-version="true" class="card-img-top" alt="@photoPath">
+        <div class="card-body">
+          <h5 class="card-title">@Product.Title</h5>
+          @if(Product.isSale)
+          {
+            <small>Buy Now for: </small>
+            <p class="card-text">$@Product.Price</p>
+            <a asp-controller="Product" asp-action="Details" asp-route-id="@Product.Id" class="btn btn-secondary btn-sm">View More</a>
+            <a asp-controller="Product" asp-action="AddtoCart" asp-route-id="@Product.Id" class="btn btn-warning btn-sm">Add to Cart</a>
+          }
+          else if(Product.isAuction)
+          {
+            <small>Bid Starts at: </small>
+            <p class="card-text">$@Product.BidStartPrice</p>
+            <a asp-controller="Product" asp-action="Details" asp-route-id="@Product.Id" class="btn btn-info btn-sm">Bid Now</a>
+          }
+          <p class="card-text"><small class="text-muted"></small></p>
+        </div>
+      </div>;
+    } 
   </div>
 </div>
