--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -61,8 +61,8 @@
                 <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Orders">Orders</a>
                 <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Bids">Bids</a>
                 <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Selling">Selling</a>
-                <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Account">Account Settings</a>
-                <a class="dropdown-item text-danger" asp-area="" asp-controller="User" asp-action="LogOut">Sign Out</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Auth" asp-action="Account">Account Settings</a>
+                <a class="dropdown-item text-danger" asp-area="" asp-controller="Auth" asp-action="LogOut">Sign Out</a>
               </div>
             </li>
             
