--- a/Views/Product/Checkout.cshtml
+++ b/Views/Product/Checkout.cshtml
@@ -1,13 +1,15 @@
 @{
   ViewData["Title"] = "Checkout";
-  int Quantity = ViewBag.UserCart.Products.Count;
-  double Subtotal = 0;
-  double Shipping = 9.99;
-  double TaxPercent = 0.06;
+  var Quantity = ViewBag.Summary[0];
+  var SubTotal = ViewBag.Summary[1];
+  var Shipping = ViewBag.Summary[2];
+  var Tax = ViewBag.Summary[4];
+  var TotalNoTax = ViewBag.Summary[5];
+  var Total = ViewBag.Summary[6];
 }
 
 <div class="container">
-  <h1 class="display-4">Checkout (@ViewBag.UserCart.Products.Count item)</h1>
+  <h1 class="display-4">Checkout (@Quantity item)</h1>
 
   <div class="row">
     <div class="col-sm-9 mb-3">
@@ -54,9 +56,7 @@
         @foreach(Product item in ViewBag.UserCart.Products)
         {
           var photoPath = "~/images/" + (item.ImagePath ?? "noimage.png");
-          Subtotal += (double)item.Price;
           <li class="list-group-item">
-            
             <div class="row no-gutters">
               <div class="col-2">
                 <img src="@photoPath" asp-append-version="true" class="card-img" alt="@photoPath">
@@ -72,23 +72,31 @@
           </li>;
         }
       </ul>
+
+      <div class="list-group-item mt-2">
+        <div class="row no-gutters">
+          <div class="col-3">
+            <a class="btn btn-warning btn-block" asp-controller="Product" asp-action="Checkout">Place your order</a>
+          </div>
+          <div class="col-7">
+            <p class="btn card-text font-weight-bold text-danger mb-0">Order Total: $@Total</p>
+          </div>
+          
+        </div>
+      </div>
+
     </div>
 
     @if(ViewBag.UserCart.Products.Count != 0)
     {
-      double Tax = Subtotal * TaxPercent;
-      double TotalNoTax = Subtotal + Shipping;
-      double Total = Tax + Subtotal + Shipping;
-      Tax = Math.Round(Tax, 2);
-      TotalNoTax = Math.Round(TotalNoTax, 2);
-      Total = Math.Round(Total, 2);
+      
       <div class="col-sm-3 card bg-light h-100">
         <div class="card-body">
           <h5 class="card-title">Order Summary</h5>
           
           <div class="d-flex justify-content-between">
             <small class="card-text mb-0">Items:</small>
-            <small class="card-text mb-0">$@Subtotal</small>
+            <small class="card-text mb-0">$@SubTotal</small>
           </div>
 
           <div class="d-flex justify-content-between">
